# expresslrs_sender

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  SPECIFICATION.md
.claude/skills/: build.md  check-crsf.md  run.md  test.md  verify-hardware.md
config/: default.json
data/: BTFL_BLACKBOX_LOG_PAVO_PICO_20260306_020247_BETAFPVF405_ELRS.BBL_elrs.csv  sample.csv  sweep_test.csv  sweep_test_spec.txt
data/blackbox/: BTFL_BLACKBOX_LOG_PAVO_PICO_20260306_020247_BETAFPVF405_ELRS.BBL.csv
include/expresslrs_sender/: types.hpp
src/: main.cpp
src/config/: config.cpp  config.hpp
src/crsf/: crc8.cpp  crsf.cpp  crsf.hpp
src/gpio/: gpio_uart_map.cpp  gpio_uart_map.hpp
src/history/: history_loader.cpp  history_loader.hpp
src/playback/: playback_controller.cpp  playback_controller.hpp
src/safety/: safety_monitor.cpp  safety_monitor.hpp
src/scheduling/: realtime.cpp  realtime.hpp
src/uart/: uart.cpp  uart.hpp
tests/: test_cli.cpp  test_config.cpp  test_crc8.cpp  test_crsf.cpp  test_gpio_uart_map.cpp  test_history_loader.cpp  test_playback.cpp  test_safety.cpp  test_timing.cpp
tests/fixtures/: config.json  valid.csv  valid.json
tools/: blackbox2csv.py
